--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.application.name=pkmn
 # ????????? ??????????? ????
 server.port=8080
 
-# ??????????? ? ???? ??????
+# ??????????? ? ???? ?????? 
 spring.datasource.url=jdbc:postgresql://${DATABASE_URL:localhost}:5432/pkmn_db
-spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.username=pkmn_user
+spring.datasource.password=pkmn_password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ????????? JPA ??? ??????? ?????????? - ?????????? ???? ??????
