--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,36 +1,48 @@
 services:
+  pkmn-database:
+     image: postgres
+     restart: "no"
+     ports:
+       - "5433:5432"
+     volumes:
+       - pkmn-database_data:/var/lib/postgresql/data
+     environment:
+       POSTGRES_USER: pkmn_user
+       POSTGRES_PASSWORD: pkmn_password
+       POSTGRES_DB: pkmn_db
+     networks:
+       - pkmn-net
   pkmn-app:
     image: pkmn-tag
     build: .
-    restart: "no"
+    restart: always
     ports:
       - "8080:8080"
     volumes:
       - pkmn-db-migration:/db/migration
     environment:
       DATABASE_URL: pkmn-database
-    depends_on:
-      - pkmn-database
     networks:
       - pkmn-net
-  pkmn-database:
-    image: postgres:17.2-alpine
-    restart: "no"
-    ports:
-      - "5432:5432"
-    volumes:
-      - pkmn-database_data:/var/lib/postgresql/data
+
+  pgadmin:
+    container_name: pgadmin_container
+    image: dpage/pgadmin4
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 12345678
-      POSTGRES_DB: pkmn_db
+      PGADMIN_DEFAULT_EMAIL: admin@mymail.ru
+      PGADMIN_DEFAULT_PASSWORD: adminpassword
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
+    volumes:
+      - pgadmin:/var/lib/pgadmin
+    ports:
+      - 80:80
     networks:
       - pkmn-net
-
-
+    restart: unless-stopped
 
 volumes:
   pkmn-database_data:
+  pgadmin:
   pkmn-db-migration:
 networks:
   pkmn-net:
